# aff3ct

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  README.md  README.rst  Simulation_BFER_ite.cpp  Simulation_BFER_ite.hpp  aff3ct-config-version.cmake.in  aff3ct-config.cmake.in  aff3ct_completion.sh  codebook_basic.cb  upload_ppa.sh
abi/: 01_aff3ct_dump_clang_ast.sh  02_aff3ct_read_clang_ast.py
ci/: aff3ct_help_parser.py  analyse-cppcheck.sh  analyse-sonarqube.sh  analysis-clang.sh  analysis-cppcheck.sh  analysis-documentation.sh  analysis-git-submodule.sh  analysis-sonarqube.sh  build-coverage-linux-gcc.sh  build-linux-clang.sh  build-linux-gcc-4.8.sh  build-linux-gcc-8-bit.sh  build-linux-gcc-mpi.sh  build-linux-gcc-systemc.sh  build-linux-gcc.sh  build-linux-icpc.sh  build-linux-macos.sh  build-linux-macosx.sh  build-mac-osx-clang.sh  build-test-linux-gcc.sh  build-windows-gcc.bat  build-windows-msvc.bat  check-documentation.py  coverage-linux-gcc.sh  coverage-linux.sh  cppcheck.sh  deploy-builds-linux.sh  deploy-github-push.sh  deploy-sonarqube-linux.sh  deploy-upload-ppa.sh  documentation-check.py  sonarqube-linux.sh  test-build-coverage-regression.sh  test-build-linux-gcc.sh  test-coverage-regression.sh  test-regression.py  test-valgrind.sh  threads.sh
ci/tools/: git-author.sh  git-branch.sh  git-date.sh  git-hash.sh  git-message.sh  git-tag.sh  git-version.sh  threads.bat
cmake/Modules/: FindGSL.cmake  FindHwloc.cmake  FindMKL.cmake  GetGitRevisionDescription.cmake  UploadPPA.cmake  aff3ct-config-version.cmake.in  aff3ct-config.cmake.in  aff3ct.in
conf/itl/: GSM-LDPC_4224.itl
conf/mod/: 16QAM_ANTI_GRAY.mod  16QAM_GRAY.mod  4QAM_GRAY.mod
doc/: Makefile  README.md  config.txt  requirements.txt  strings.rst
doc/doxygen/: README.md  config.txt
doc/pages/: Main.md  Paper_results.md  PyBER.md  Windows_install.md
doc/source/: Doxyfile  conf.py  index.rst
doc/sphinx/: README.md  requirements.txt  strings.rst
include/: aff3ct.hpp
include/Factory/: Command_parser.hpp  Factory.hpp  Header.hpp
include/Module/: Chain.hpp  Chain.hxx  Module.hpp  Module.hxx  SC_Module.hpp  SC_Module.hxx  Socket.hpp  Socket.hxx  Task.hpp  Task.hxx
include/Tools/: auto_cloned_unique_ptr.hpp  auto_cloned_unique_ptr.hxx  general_utils.h  general_utils.hxx  types.h  version.h
plotter/PyBER/: README.md  f_explorer.py  fileExplorer.py  pyBER.py  pyber.desktop  reader.py  readme.md
scripts/: aff3ct  aff3ct_completion.sh  aff3ct_help_reader.py  check_keys_dochelp.py  generate_aff3ct_header.sh  generate_polar_decoders.sh  generate_sphinx_usage.py  gsm_BPF_MAXS_SPA.sh  gsm_BPF_MAX_NMS.sh  gsm_BPL_MAXS_SPA.sh  gsm_BPL_MAX_NMS.sh  run_bch.sh  run_bfer_polar_SC.sh  run_bfer_polar_SCL.sh  run_bfer_polar_SC_debug.sh  run_bfer_polar_SC_small.sh  run_bfer_turbo_LTE.sh  run_exit_polar_SCAN.sh  test-valgrind.sh  update_refs_headers.py
scripts/CPM/: gsm_BPF_MAXS_SPA.sh  gsm_BPF_MAX_NMS.sh  gsm_BPL_MAXS_SPA.sh  gsm_BPL_MAX_NMS.sh
scripts/GSM_LDPC/: gsm_BPF_MAXS_SPA.sh  gsm_BPF_MAX_NMS.sh  gsm_BPL_MAXS_SPA.sh  gsm_BPL_MAX_NMS.sh
scripts/abi/: 01_aff3ct_dump_clang_ast.sh  02_aff3ct_read_clang_ast.py  README.md
scripts/debug_parser/: README.MD  README.md  aff3ct_debug_parser.py  requirements.txt
scripts/gui/: aff3ct_gui.py  gui_argument.py  readme.md
src/: aff3ct.hpp  main.cpp  main.h  test_GA.cpp  test_GA.hpp
src/CRC/: CRC.hpp  CRC_NO.cpp  CRC_NO.hpp  CRC_polynomial.cpp  CRC_polynomial.hpp  CRC_polynomial_double.cpp  CRC_polynomial_double.hpp  CRC_polynomial_inter.cpp  CRC_polynomial_inter.hpp  SC_CRC.hpp
src/Channel/: Channel.hpp  SC_Channel.hpp
src/Decoder/: Decoder.hpp  Decoder_NO.cpp  Decoder_NO.hpp  Decoder_SISO.hpp  SC_Decoder.hpp  SC_SISO.hpp  SISO.hpp  decoder_functions.h
src/Encoder/: Encoder.hpp  Encoder_NO.cpp  Encoder_NO.hpp  Encoder_sys.hpp  SC_Encoder.hpp
src/Error/: Error_analyzer.cpp  Error_analyzer.hpp  Error_analyzer_reduction.cpp  Error_analyzer_reduction.hpp  Error_analyzer_std.cpp  Error_analyzer_std.hpp  SC_Error_analyzer.hpp
src/Factory/: Command_parser.cpp  Command_parser.hpp  Command_scanner.cpp  Command_scanner.hpp  Factory.cpp  Factory.hpp  Header.cpp  strings.cpp  strings.cpp.in
src/Generator/: Generator.hpp
src/Interleaver/: Interleaver.hpp  Interleaver_CCSDS.hpp  Interleaver_LTE.hpp  Interleaver_NO.hpp  Interleaver_columns.hpp  Interleaver_golden.hpp  Interleaver_random.hpp  Interleaver_random_hard.hpp  SC_Interleaver.hpp
src/Launcher/: Launcher.cpp  Launcher.hpp
src/Modulator/: Modulator.hpp  Modulator_BPSK.cpp  Modulator_BPSK.hpp  Modulator_PAM.cpp  Modulator_PAM.hpp  SC_Modulator.hpp  mod_functions.h
src/Module/: Chain.cpp  Module.cpp  Module.hpp  Module.hxx  Process.cpp  Process.hpp  SC_Module.cpp  SC_Module.hpp  SC_Module.hxx  Socket.cpp  Socket.hpp  Socket.hxx  Task.cpp  Task.hpp  Task.hxx
src/Puncturer/: Puncturer.hpp  Puncturer_NO.cpp  Puncturer_NO.hpp  SC_Puncturer.hpp
src/Quantizer/: Quantizer.hpp  Quantizer_NO.cpp  Quantizer_NO.hpp  Quantizer_fast.cpp  Quantizer_fast.hpp  Quantizer_standard.cpp  Quantizer_standard.hpp  Quantizer_tricky.cpp  Quantizer_tricky.hpp  SC_Quantizer.hpp
src/Simulation/: Simulation.cpp  Simulation.hpp  Simulation.hxx
src/Source/: SC_Source.hpp  Source.hpp  Source_AZCW.cpp  Source_AZCW.hpp  Source_SC.hpp  Source_fixed.cpp  Source_fixed.hpp  Source_random.cpp  Source_random.hpp  Source_random_LCG.cpp  Source_random_LCG.hpp  Source_random_fast.cpp  Source_random_fast.hpp
src/Terminal/: Terminal.hpp  Terminal_BFER.cpp  Terminal_BFER.hpp  Terminal_BFER_legacy.cpp  Terminal_BFER_legacy.hpp  Terminal_EXIT.cpp  Terminal_EXIT.hpp
src/Tools/: Arguments_reader.cpp  Arguments_reader.hpp  Bit_packer.hpp  Header.hpp  Noise.cpp  Noise.hpp  auto_cloned_unique_ptr.hpp  auto_cloned_unique_ptr.hxx  bash_tools.cpp  bash_tools.h  general_utils.cpp  general_utils.h  general_utils.hxx  git_sha1.cpp  git_sha1.cpp.in  git_sha1.h  params.h  simu_tools.cpp  simu_tools.h  system_functions.cpp  system_functions.h  types.h  (+2 more)
tests/: tests.py
(+4103 files in other folders)
